<resources>
    <string name="app_name">SmartBusinessCard</string>
    <string name="action_settings">Settings</string>

    <string name="main_button_profile">Your Profile</string>
    <string name="main_button_your_contacts">Your Contacts</string>
    <string name="profile_description">DESCRIPTION</string>
    <string name="profile_description_default">The user has not written a descripton yet.</string>
    <string name="profile_tags">INTERESTS AND TOPICS</string>

    <string name="bluetooth_error">This device does not support Bluetooth.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="login_email">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login_message">Sign in</string>
    <string name="login_create_profile">Create a new profile</string>

    <string name="new_profile">New Profile</string>
    <string name="new_profile_create_profile">Create profile</string>

    <string name="new_user_email">E-mail</string>
    <string name="new_user_password">Password</string>

    <string name="new_profile_email_hint">Enter your e-mail</string>
    <string name="new_profile_password_hint">Enter your password</string>

    <string name="update_profile">Edit profile</string>
    <string name="update_profile_email">E-mail</string>
    <string name="update_profile_old_password">Old password</string>
    <string name="update_profile_name">Name</string>
    <string name="update_profile_description">Description</string>
    <string name="update_profile_tags">Interests</string>
    <string name="update_profile_photo">Upload a photo</string>
    <string name="update_profile_save">Save</string>

    <string name="update_profile_name_hint">Enter your name</string>
    <string name="update_profile_description_hint">Enter your profile description</string>


    <string name="tab_profile">Profile</string>
    <string name="tab_contacts">Contacts</string>
    <string name="tab_conferences">Conferences</string>

    <string name="tag_it">IT</string>
    <string name="tag_computers">Computers</string>
    <string name="tag_social_networking">Social networking</string>
    <string name="tag_java_development">Java Development</string>
    <string name="tag_programming">Programming</string>
    <string name="tag_recruitment">Recruitment</string>

    <string name="preference_file_key">com.smartbusinesscard.PREFERENCE_FILE_KEY</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="create_conference">Create conference</string>
    <string name="create_conference_conf_info">Conference Info</string>
    <string name="create_conference_name_hint">Name</string>
    <string name="create_conference_description_hint">Description</string>
    <string name="create_conference_date">Date</string>
    <string name="create_conference_date_format">YYYY-MM-DD</string>
    <string name="create_conference_time">Time</string>
    <string name="create_conference_time_format">HH:MM</string>

    <string name="create_conference_conf_address">Map Coordinates</string>
    <string name="create_conference_position_false">Position not chosen.</string>
    <string name="create_conference_position_true">Position chosen.</string>
    <string name="create_conference_google_maps">Choose coordinates</string>

    <string name="conference_view_description">Description</string>
    <string name="conference_view_name">Name</string>
    <string name="conference_view_feedback_false">Not checked in</string>
    <string name="conference_view_feedback_true">Checked in</string>
    <string name="conference_button">Check in</string>

    <string name="maps_save">Save</string>
</resources>
