<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_conference_conf_info"
            android:textColor="@color/black"
            android:textSize="26dp" />

        <EditText android:id="@+id/new_conference_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_conference_name_hint" />

        <EditText android:id="@+id/new_conference_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/create_conference_description_hint"
            android:lines="6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText android:id="@+id/new_conference_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/create_conference_date" />

            <EditText android:id="@+id/new_conference_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/create_conference_time" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/create_conference_date_format"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="5dp"
                android:text="@string/create_conference_time_format"
                android:textSize="12sp" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/create_conference_conf_address"
            android:textColor="@color/black"
            android:textSize="26dp" />

        <TextView
            android:id="@+id/create_conference_google_maps_boolean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_conference_position_false" />

        <Button
            android:id="@+id/create_conference_google_maps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="googleMap"
            android:text="@string/create_conference_google_maps" />

        <Button android:id="@+id/new_conference_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maps_save"
            android:onClick="createConference"/>
    </LinearLayout>
</ScrollView>