<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_user_email" />

        <EditText
            android:id="@+id/new_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_profile_email_hint"
            android:shadowColor="@color/fadeText"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_password" />

        <EditText
            android:id="@+id/new_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_profile_password_hint"
            android:password="true"
            android:shadowColor="@color/fadeText"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/button_create_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/buttons"
            android:onClick="createAccount"
            android:text="@string/new_profile_create_profile"
            android:textColor="@color/black" />
    </LinearLayout>
</ScrollView>